--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
 </head>
 <body>
 
-    <section id="interface_app"></section>
+    <section id="interface_app">
+        <h1>TomateFoco</h1>
+
+        <div class="display">
+            <div class="background"></div>
+            <span id="timer">25:00</span>
+            <div class="btnplay">Play</div>
+        </div>
+
+        <div class="buttons">
+            
+        </div>
+    </section>
     
 </body>
 </html>
