--- a/index.html
+++ b/index.html
@@ -27,17 +27,22 @@
 
             <div class="btns selecionado">
             <label class="primeirotxtbtn">POMODORO</label><br>
-            <label class="segundotxtbtn">25 minutos</label>
+            <label class="segundotxtbtn">25 min</label>
             </div>
 
             <div class="btns">
                 <label class="primeirotxtbtn">1ª PAUSA</label><br>
-                <label class="segundotxtbtn">5 minutos</label>
+                <label class="segundotxtbtn">5 min</label>
             </div>
 
             <div class="btns">
                 <label class="primeirotxtbtn">2ª PAUSA</label><br>
-                <label class="segundotxtbtn">15 minutos</label>
+                <label class="segundotxtbtn">15 min</label>
+            </div>
+
+            <div class="btns">
+                <label class="primeirotxtbtn">3ª PAUSA</label><br>
+                <label class="segundotxtbtn">30 min</label>
             </div>
 
             
