--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </div>
 
     <section id="interface_app">
-        <h1>TomateFocoo</h1>
+        <h1>TomateFoco</h1>
 
         <div class="display">
             <div class="background">
