--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <div class="display">
             <div class="background">
-                <img src="../imagens/Icon.png" width="200px" alt="">
+                <img src="../imagens/Icon.png" width="200px" height="200px" alt="">
             </div>
             <span id="timer">25:00</span>
             
